--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -609,6 +609,9 @@
     <Content Include="Views\EmployeeTypes\Index.cshtml" />
     <Content Include="Views\GatePass\CheckOut.cshtml" />
     <Content Include="Views\AssignRequisitions\Requests.cshtml" />
+    <Content Include="Views\GatePass\CheckIn.cshtml" />
+    <Content Include="Views\GatePass\CompleteRequisition.cshtml" />
+    <Content Include="Views\GatePass\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
