--- a/RMS.App/Web.config
+++ b/RMS.App/Web.config
@@ -10,14 +10,16 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   
   <!--parvaz Connection string-->
-  <connectionStrings>
-    <add name="RmsDbContext" connectionString="Server=DESKTOP-PQILVIV; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
-  </connectionStrings>
   
-  <!--Chitto Connection string--><!--
+  <!--<connectionStrings>
+    <add name="RmsDbContext" connectionString="Server=DESKTOP-PQILVIV; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  
+  <!--Chitto Connection string-->
+    
   <connectionStrings>
     <add name="RmsDbContext" connectionString="Server=DESKTOP-3R4FBBV; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
+  </connectionStrings>
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
