--- a/RMS.Repositories.Contracts/RMS.Repositories.Contracts.csproj
+++ b/RMS.Repositories.Contracts/RMS.Repositories.Contracts.csproj
@@ -47,6 +47,7 @@
     <Compile Include="IDistrictRepository.cs" />
     <Compile Include="IDivisionRepository.cs" />
     <Compile Include="IEmployeeRepository.cs" />
+    <Compile Include="IFeedbackRepository.cs" />
     <Compile Include="IOrganizationRepository.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="IRequisitionRepository.cs" />
