--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -202,7 +202,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AddressViewModel.cs" />
     <Compile Include="ViewModels\AssignRequisitionViewModel.cs" />
-    <Compile Include="ViewModels\CommentViewModel.cs" />
+    <Compile Include="ViewModels\FeedbackViewModel.cs" />
     <Compile Include="ViewModels\DepartmentViewModel.cs" />
     <Compile Include="ViewModels\DesignationViewModel.cs" />
     <Compile Include="ViewModels\EmployeeTypeViewModel.cs" />
@@ -666,9 +666,10 @@
     <Content Include="Views\GatePass\CompleteRequisition.cshtml" />
     <Content Include="Views\GatePass\Edit.cshtml" />
     <Content Include="Views\Requisitions\RequisitionList.cshtml" />
-    <Content Include="Views\Requisitions\Notification.cshtml" />
+    <Content Include="Views\Requisitions\Feedback.cshtml" />
     <Content Include="Views\AssignRequisitions\Cancel.cshtml" />
     <Content Include="Views\AssignRequisitions\Edit.cshtml" />
+    <Content Include="Views\Requisitions\Reply.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
