--- a/RMS.Repositories/RMS.Repositories.csproj
+++ b/RMS.Repositories/RMS.Repositories.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DistrictRepository.cs" />
     <Compile Include="DivisionRepository.cs" />
     <Compile Include="EmployeeRepository.cs" />
+    <Compile Include="FeedbackRepository.cs" />
     <Compile Include="OrganizationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequisitionRepository.cs" />
