--- a/RMS.App/packages.config
+++ b/RMS.App/packages.config
@@ -28,6 +28,7 @@
   <package id="Moment.js" version="2.9.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="Unity.Abstractions" version="3.3.0" targetFramework="net452" />
   <package id="Unity.Container" version="5.7.0" targetFramework="net452" />
