--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -212,6 +212,7 @@
     <Compile Include="ViewModels\EmployeeTypeViewModel.cs" />
     <Compile Include="ViewModels\EmployeeViewModel.cs" />
     <Compile Include="ViewModels\OrganizationViewModel.cs" />
+    <Compile Include="ViewModels\ValidationModels\GreaterThanZeroAttribute.cs" />
     <Compile Include="ViewModels\ValidationModels\RequisitionDateTimeValidationCheckForOther.cs" />
     <Compile Include="ViewModels\ValidationModels\RequisitionDateTimeValidationCheckForOwn.cs" />
     <Compile Include="ViewModels\RequisitionStatusViewModel.cs" />
