--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -237,6 +237,10 @@
     <Compile Include="Migrations\201809161424233_EmployeeModelAddedUserId.Designer.cs">
       <DependentUpon>201809161424233_EmployeeModelAddedUserId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809181140501_AppUserId Null In employee.cs" />
+    <Compile Include="Migrations\201809181140501_AppUserId Null In employee.Designer.cs">
+      <DependentUpon>201809181140501_AppUserId Null In employee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\RequisitionSummaryReportVM.cs" />
@@ -337,6 +341,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201809161424233_EmployeeModelAddedUserId.resx">
       <DependentUpon>201809161424233_EmployeeModelAddedUserId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809181140501_AppUserId Null In employee.resx">
+      <DependentUpon>201809181140501_AppUserId Null In employee.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
